one-column blade and basic variables and typography

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,2 +1,14 @@
+
+// Google Fonts
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@700');
+
+// Type/Font Variables
+$font-stack-primary:'Roboto', sans-serif;
+$font-stack-secondary: 'Lato', sans-serif;
+
+// Colors
 $color-primary: #0c023f;
 $color-secondary: #f1ba00;
+$background: white;
+$background-contrast: lightgrey;
+
