--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,37 @@
+@import url(https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@700);
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Roboto", sans-serif;
+  color: #0c023f;
+}
+
+h2 {
+  font-size: 2.3em;
+  text-transform: uppercase;
+  line-height: 0.5em;
+}
+@media (max-width: 575px) {
+  h2 {
+    font-size: 2em;
+    line-height: 1em;
+  }
+}
+
+p {
+  font-family: "Lato", sans-serif;
+  color: black;
+  font-size: 0.8em;
+  text-align: left;
+  line-height: 1.2em;
+}
+
+hr {
+  width: 30%;
+  height: 4px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #0c023f;
+}
+
 #app {
   padding: 0;
 }
@@ -8,21 +42,29 @@
 }
 
 nav {
-  background-color: aquamarine;
+  background-color: #0c023f;
 }
 
 .banner-block {
-  background-color: bisque;
+  background-color: lightgrey;
 }
 
 .one-column-block {
-  background-color: cadetblue;
+  background-color: white;
+  padding-left: 15%;
+  padding-right: 15%;
+}
+@media (max-width: 575px) {
+  .one-column-block {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
 
 .two-column-icon-block {
-  background-color: crimson;
+  background-color: lightgrey;
 }
 
 .two-column-block {
-  background-color: darkgray;
+  background-color: white;
 }
