--- a/resources/sass/blocks/_one-column.scss
+++ b/resources/sass/blocks/_one-column.scss
@@ -1,3 +1,10 @@
 .one-column-block {
-    background-color: cadetblue;
+    background-color: $background;
+    padding-left: 15%;
+    padding-right: 15%;  
+    @media (max-width: 575px) {
+        padding-left: 10%;
+        padding-right: 10%;
+    }   
 }
+
