--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -1,10 +1,29 @@
 
-h1, h2, h3, h4, h5, h6 {
+.banner {
     font-family: $font-stack-primary;
-    color: $color-primary;
+    color: $color-secondary;
+    text-transform:uppercase;
+    padding-left: 8%;
+    @media(max-width:575px) {
+        padding-left:0;
+        text-align: center;
+    }
+}
+h1 {
+    font-size: 5em;
+    line-height: 0.7em;
+}
+h2 {
+    font-size: 3em;
+    padding-top: 50px;
 }
 
-h2 {
+
+// Content Sections
+
+h3 {
+    font-family: $font-stack-primary;
+    color: $color-primary;
     font-size: 2.3em;
     text-transform:uppercase;
     line-height: 0.5em;
