--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,12 +1,12 @@
 @import url(https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@700);
-.banner {
+.ban-text, h2, h1 {
   font-family: "Roboto", sans-serif;
   color: #f1ba00;
   text-transform: uppercase;
   padding-left: 8%;
 }
 @media (max-width: 575px) {
-  .banner {
+  .ban-text, h2, h1 {
     padding-left: 0;
     text-align: center;
   }
