start on two column with icon layout, continuing img issues

--- a/resources/sass/blocks/_two-column-icon.scss
+++ b/resources/sass/blocks/_two-column-icon.scss
@@ -1,3 +1,10 @@
 .two-column-icon-block {
     background-color: $background-contrast;
 }
+
+.icon {
+    background-color:$color-primary;
+    border-radius: 50%;
+    height:50px;
+    width:30px;
+}
