--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,7 +29,7 @@ h3 {
   text-transform: uppercase;
   line-height: 0.5em;
 }
-@media (max-width: 575px) {
+@media (max-width: 675px) {
   h3 {
     font-size: 2em;
     line-height: 1em;
@@ -58,7 +58,7 @@ hr {
 
 .block {
   width: 100%;
-  padding: 2.5rem 0;
+  padding: 3rem 0;
 }
 
 .text-block {
@@ -74,6 +74,7 @@ hr {
 
 .card {
   border: none;
+  background-color: inherit;
 }
 
 @media (min-width: 575px) {
@@ -112,6 +113,13 @@ nav {
 
 .two-column-icon-block {
   background-color: lightgrey;
+}
+
+.icon {
+  background-color: #0c023f;
+  border-radius: 50%;
+  height: 50px;
+  width: 30px;
 }
 
 .two-column-block {
