--- a/resources/sass/_theme.scss
+++ b/resources/sass/_theme.scss
@@ -4,7 +4,7 @@
 
 .block {
     width: 100%;
-    padding: 2.5rem 0;
+    padding: 3rem 0;
 }
 
 .text-block {
@@ -18,6 +18,7 @@
 
 .card {
     border: none;
+    background-color: inherit;
 }
 
 .card-left {
