--- a/public/css/app.css
+++ b/public/css/app.css
@@ -78,13 +78,13 @@ hr {
 }
 
 @media (min-width: 575px) {
-  .card-left {
+  .col-left {
     margin-right: 15px;
   }
 }
 
 @media (min-width: 575px) {
-  .card-right {
+  .col-right {
     margin-left: 15px;
   }
 }
@@ -126,18 +126,10 @@ nav {
   background-color: white;
 }
 
-.card {
-  border: none;
-}
-
-@media (min-width: 575px) {
-  .card-left {
-    margin-right: 15px;
-  }
-}
-
-@media (min-width: 575px) {
-  .card-right {
-    margin-left: 15px;
-  }
+.img3 {
+  background-image: url(/images/girl-in-kayak-in-mountain-lake.jpg?28aef65233684be05ce5bb7c4f4ca411);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  height: 250px;
 }
