--- a/resources/sass/_theme.scss
+++ b/resources/sass/_theme.scss
@@ -21,12 +21,12 @@
     background-color: inherit;
 }
 
-.card-left {
+.col-left {
     @media (min-width: 575px) {
     margin-right: 15px;
     }
 }
-.card-right {
+.col-right {
     @media (min-width: 575px) {
     margin-left: 15px;
     }
