--- a/resources/sass/blocks/_two-column.scss
+++ b/resources/sass/blocks/_two-column.scss
@@ -2,17 +2,10 @@
     background-color:$background;
 }
 
-.card {
-    border: none;
-}
-
-.card-left {
-    @media (min-width: 575px) {
-    margin-right: 15px;
-    }
-}
-.card-right {
-    @media (min-width: 575px) {
-    margin-left: 15px;
-    }
+.img3{
+    background-image: url('../../../public/images/girl-in-kayak-in-mountain-lake.jpg');
+    background-size: contain;
+    background-repeat:no-repeat;
+    background-position-x:center;
+    height: 250px;
 }
