--- a/public/css/app.css
+++ b/public/css/app.css
@@ -126,10 +126,18 @@ nav {
   background-color: white;
 }
 
-.img3 {
-  background-image: url(/images/girl-in-kayak-in-mountain-lake.jpg?28aef65233684be05ce5bb7c4f4ca411);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  height: 250px;
+.card {
+  border: none;
+}
+
+@media (min-width: 575px) {
+  .card-left {
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 575px) {
+  .card-right {
+    margin-left: 15px;
+  }
 }
