--- a/resources/sass/blocks/_two-column-icon.scss
+++ b/resources/sass/blocks/_two-column-icon.scss
@@ -8,3 +8,19 @@
     height:50px;
     width:30px;
 }
+.img1{
+    background-image: url('../../../public/images/boys-on-hill.jpg');
+    background-size: contain;
+    background-repeat:no-repeat;
+    background-position-x:center;
+    height: 250px;
+}
+
+.img2{
+    background-image: url('../../../public/images/icon_lockup.png');
+    background-size: contain;
+    background-repeat:no-repeat;
+    background-position-x:center;
+    height: 100px;
+    margin-bottom: 5%;
+}
