--- a/public/css/app.css
+++ b/public/css/app.css
@@ -136,6 +136,29 @@ nav {
     border-bottom: 3px solid #f1ba00;
   }
 }
+.icon {
+  background-image: url("/public/images/hamburger_icon.png");
+  background-position: center;
+  background-size: contain;
+}
+
+.pane {
+  position: fixed;
+  top: 80px;
+  right: -100%;
+  padding: 1rem 2rem;
+  height: 20vh;
+  width: 100%;
+  background: #f1ba00;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+  transition: 0.5s all ease;
+}
+@media (max-width: 575px) {
+  .pane.open {
+    right: 0%;
+  }
+}
+
 .banner-block {
   background-color: lightgrey;
   background-image: linear-gradient(to right, rgba(41, 27, 11, 0.593), rgba(41, 27, 11, 0.233)), url(/images/mountain-on-horizon.jpg?54abbd39d1593c286aeba92fc78cb567);
