--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -28,3 +28,28 @@ nav {
         border-bottom: 3px solid $color-secondary;
     }
 }
+
+
+.icon {
+    background-image: url("/public/images/hamburger_icon.png");
+    background-position: center;
+    background-size: contain;
+}   
+
+    
+.pane {
+    position:fixed;
+    top: 80px;
+    right: -100%;
+    padding: 1rem 2rem;
+    height: 20vh;
+    width: 100%;
+    background: #f1ba00;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+    transition: 0.5s all ease;
+    @media(max-width:575px) {
+    &.open {
+        right: 0%;
+    }
+    }
+}
