--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,6 +5,11 @@
   text-transform: uppercase;
   padding-left: 4rem;
 }
+@media (max-width: 575px) {
+  .gold-text, h6, h5, h4, .headline, h2, h1 {
+    padding-left: 1rem;
+  }
+}
 
 @media (max-width: 575px) {
   .headline, h2, h1 {
@@ -53,6 +58,13 @@ h6 {
   padding: 0 2rem;
 }
 
+.hidden-link h6 {
+  color: #0c023f;
+  text-align: right;
+  font-size: 1.3em;
+  line-height: 1.6em;
+}
+
 p {
   font-family: "Lato", sans-serif;
   color: black;
@@ -67,6 +79,11 @@ hr {
   margin-right: auto;
   margin-left: auto;
   background-color: #0c023f;
+}
+
+a:hover {
+  -webkit-text-decoration-color: #0c023f;
+          text-decoration-color: #0c023f;
 }
 
 #app {
@@ -110,47 +127,31 @@ nav {
   background-color: #0c023f;
 }
 
-.navbar {
-  padding: 1rem 0 0 0;
-}
-
-#new-navbar-toggler:checked ~ .collapse {
-  display: block;
-  background-color: #f1ba00;
-  margin: 0;
-}
-#new-navbar-toggler:checked ~ .collapse h6 {
-  color: #0c023f;
-  text-align: right;
-  font-size: 1em;
+.navbar-brand {
+  padding-top: 1rem;
 }
 
 .navbar-dark .navbar-toggler {
   color: #f1ba00;
   border: none;
-  padding-right: 3rem;
 }
 
+/*.navbar-toggle-icon {
+    data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e
+}*/
 @media (min-width: 575px) {
   .nav-link:hover {
     border-bottom: 3px solid #f1ba00;
   }
 }
-.icon {
-  background-image: url("/public/images/hamburger_icon.png");
-  background-position: center;
-  background-size: contain;
-}
-
 .pane {
   position: fixed;
-  top: 80px;
+  top: 90px;
   right: -100%;
   padding: 1rem 2rem;
-  height: 20vh;
+  height: 9rem;
   width: 100%;
   background: #f1ba00;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
   transition: 0.5s all ease;
 }
 @media (max-width: 575px) {
