--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -4,6 +4,9 @@
     color: $color-secondary;
     text-transform:uppercase;
     padding-left: 4rem;
+    @media(max-width:575px) {
+        padding-left:1rem;
+    }
 }
 
  .headline {
@@ -57,6 +60,13 @@ h6 {
     padding: 0 2rem;
 }
 
+.hidden-link h6{
+    color: $color-primary;
+    text-align: right;
+    font-size: 1.3em;
+    line-height: 1.6em;
+}
+
 p {
     font-family: $font-stack-secondary;
     color: black;
@@ -71,4 +81,8 @@ hr {
     margin-right: auto;
     margin-left: auto;
     background-color:$color-primary;  
+}
+
+a:hover {
+    text-decoration-color:$color-primary;
 }
