--- a/public/css/app.css
+++ b/public/css/app.css
@@ -122,19 +122,12 @@ nav {
   width: 30px;
 }
 
-<<<<<<< HEAD
-.img3 {
-  background-image: url(/images/girl-in-kayak-in-mountain-lake.jpg?28aef65233684be05ce5bb7c4f4ca411);
-=======
 .img1 {
   background-image: url(/images/boys-on-hill.jpg?887170cc56614b925c885637390ce19f);
->>>>>>> two-column-icon
   background-size: contain;
   background-repeat: no-repeat;
   background-position-x: center;
   height: 250px;
-<<<<<<< HEAD
-=======
 }
 
 .img2 {
@@ -148,5 +141,12 @@ nav {
 
 .two-column-block {
   background-color: white;
->>>>>>> two-column-icon
+}
+
+.img3 {
+  background-image: url(/images/girl-in-kayak-in-mountain-lake.jpg?28aef65233684be05ce5bb7c4f4ca411);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  height: 250px;
 }
