--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,9 +53,9 @@ h5 {
 }
 
 h6 {
-  font-size: 0.8em;
+  font-size: 1em;
   text-align: center;
-  padding: 0 2rem;
+  padding: 0 0.8rem;
 }
 
 .hidden-link h6 {
@@ -63,6 +63,11 @@ h6 {
   text-align: right;
   font-size: 1.3em;
   line-height: 1.6em;
+}
+
+.pane a:hover {
+  -webkit-text-decoration-color: #0c023f;
+          text-decoration-color: #0c023f;
 }
 
 p {
@@ -79,11 +84,6 @@ hr {
   margin-right: auto;
   margin-left: auto;
   background-color: #0c023f;
-}
-
-a:hover {
-  -webkit-text-decoration-color: #0c023f;
-          text-decoration-color: #0c023f;
 }
 
 #app {
@@ -131,9 +131,16 @@ nav {
   padding-top: 1rem;
 }
 
-.navbar-dark .navbar-toggler {
-  color: #f1ba00;
-  border: none;
+.navbar-nav {
+  padding-right: 3rem;
+}
+
+@media (min-width: 575px) {
+  .nav-link:hover {
+    border-bottom: 4px solid #f1ba00;
+    padding-bottom: 28px;
+    margin-bottom: -28px;
+  }
 }
 
 .custom-toggler .navbar-toggler-icon {
@@ -144,11 +151,11 @@ nav {
   border-color: #f1ba00;
 }
 
-@media (min-width: 575px) {
-  .nav-link:hover {
-    border-bottom: 3px solid #f1ba00;
-  }
+.navbar-dark .navbar-toggler {
+  border: none;
+  font-size: 2.5rem;
 }
+
 .pane {
   position: fixed;
   top: 90px;
@@ -159,7 +166,7 @@ nav {
   background: #f1ba00;
   transition: 0.5s all ease;
 }
-@media (max-width: 575px) {
+@media (max-width: 768px) {
   .pane.open {
     right: 0%;
   }
@@ -170,11 +177,11 @@ nav {
   background-image: linear-gradient(to right, rgba(41, 27, 11, 0.593), rgba(41, 27, 11, 0.233)), url(/images/mountain-on-horizon.jpg?54abbd39d1593c286aeba92fc78cb567);
   background-size: cover;
   background-position-y: center;
-  height: 300px;
+  height: 350px;
 }
 @media (max-width: 575px) {
   .banner-block {
-    background-size: auto;
+    background-size: 175%;
     background-position-x: center;
   }
 }
@@ -185,13 +192,6 @@ nav {
 
 .two-column-icon-block {
   background-color: lightgrey;
-}
-
-.icon {
-  background-color: #0c023f;
-  border-radius: 50%;
-  height: 50px;
-  width: 30px;
 }
 
 .img1 {
@@ -220,5 +220,5 @@ nav {
   background-size: contain;
   background-repeat: no-repeat;
   background-position-x: center;
-  height: 250px;
+  height: 300px;
 }
