--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -9,7 +9,7 @@
     }
 }
 
- .headline {
+.headline {
     @extend .gold-text;
     @media(max-width:575px) {
         padding-left:0;
@@ -55,9 +55,9 @@ h5 {
 
 h6 {
     @extend .gold-text;
-    font-size: 0.8em;
+    font-size: 1em;
     text-align: center;
-    padding: 0 2rem;
+    padding: 0 0.8rem;
 }
 
 .hidden-link h6{
@@ -65,6 +65,10 @@ h6 {
     text-align: right;
     font-size: 1.3em;
     line-height: 1.6em;
+}
+
+.pane a:hover {
+    text-decoration-color:$color-primary;
 }
 
 p {
@@ -81,8 +85,4 @@ hr {
     margin-right: auto;
     margin-left: auto;
     background-color:$color-primary;  
-}
-
-a:hover {
-    text-decoration-color:$color-primary;
 }
