--- a/resources/sass/blocks/_banner.scss
+++ b/resources/sass/blocks/_banner.scss
@@ -3,9 +3,9 @@
     background-image: linear-gradient(to right, rgba(41, 27, 11, 0.593), rgba(41, 27, 11, 0.233)), url('../../../public/images/mountain-on-horizon.jpg');
     background-size: cover;
     background-position-y:center;
-    height: 300px;
+    height: 350px;
     @media (max-width:575px){
-        background-size:auto;
+        background-size:175%;
         background-position-x: center;
     }
 }
